[#100137666] naval/francis Fixes alignment issues on the quantity to ship div

--- a/eums/client/less/general.less
+++ b/eums/client/less/general.less
@@ -614,3 +614,7 @@ h4.page-header {
   font-size: 100%;
   border-radius: 5px;
 }
+
+.three-columns-form .table-header th:hover {
+  background-color: #1cabe2;
+}
